feat: add solutions to lc problems: No.0894
No.0894.All Possible Full Binary Trees